feat: update CSS and make layout reponsive

--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -23,12 +23,165 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   font-family: "Outfit";
   font-size: 16px;
+  color: var(--stone-600);
+
+  background-color: var(--stone-100);
 }
 
 h1,
 h2 {
   font-family: "Young-serif";
+}
+
+main {
+  width: min(700px, 100%);
+  background-color: var(--white);
+  padding: 40px;
+  border-radius: 15px;
+}
+
+img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 400;
+  color: var(--stone-900);
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 200;
+  color: var(--brown);
+}
+
+h3 {
+  margin: 0;
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: var(--rose-800);
+}
+
+span {
+  font-weight: bold;
+  margin-left: 20px;
+}
+
+hr {
+  margin-top: 25px;
+  height: 1px;
+  border: 0;
+  background: var(--stone-150);
+}
+
+.description {
+  margin-bottom: 25px;
+}
+
+.preparation-time {
+  width: 100%;
+  box-sizing: border-box;
+  background-color: var(--rose-50);
+  border-radius: 10px;
+  padding: 25px;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style-position: inside;
+  line-height: 2.5;
+}
+
+ul li::marker {
+  font-size: 10px;
+}
+
+.instructions ol {
+  list-style: none;
+  counter-reset: step;
+  margin: 0;
+  padding: 0;
+}
+
+.instructions li {
+  counter-increment: step;
+  position: relative;
+
+  padding-left: 3ch;
+  line-height: 1.5;
+
+  margin-bottom: 0.75rem;
+}
+
+.instructions li:last-child {
+  margin-bottom: 0;
+}
+
+.instructions li::before {
+  content: counter(step) ".";
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  font-weight: 700;
+  color: var(--brown);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+tr {
+  border-bottom: 1px solid var(--stone-150);
+}
+
+td {
+  padding: 10px 30px;
+  text-align: left;
+}
+
+.number {
+  font-weight: bold;
+  color: var(--brown);
+}
+
+@media (max-width: 760px) {
+  body {
+    padding: 0;
+    margin: 0;
+  }
+  main {
+    border-radius: 0;
+    max-width: 100%;
+    padding: 0;
+  }
+
+  .container {
+    padding: 30px;
+  }
+
+  img {
+    border-radius: 0;
+  }
+
+  h1 {
+    font-size: 35px;
+    margin-top: 0;
+  }
 }
