--- a/four-card-feature-section-master/style.css
+++ b/four-card-feature-section-master/style.css
@@ -4,6 +4,10 @@
   --cyan: hsl(180, 62%, 55%);
   --orange: hsl(34, 97%, 64%);
   --blue: hsl(212, 86%, 64%);
+
+  --grey-500: hsl(234, 12%, 34%);
+  --grey-400: hsl(212, 6%, 44%);
+  --white: hsl(0, 0%, 100%);
   /* spacing */
   --space-500: 40px;
   --space-400: 32px;
@@ -13,23 +17,23 @@
 }
 
 .text-preset-1 {
-  font: "Poppins";
-  font-size: 36px;
+  font-family: "Poppins";
+  font-size: 24px;
   line-height: 140%;
   letter-spacing: 0.25px;
   font-weight: 600;
 }
 
 .text-preset-2 {
-  font: "Poppins";
-  font-size: 36px;
+  font-family: "Poppins";
+  font-size: 24px;
   line-height: 140%;
   letter-spacing: 0.25px;
   font-weight: 200;
 }
 
 .text-preset-3 {
-  font: "Poppins";
+  font-family: "Poppins";
   font-size: 20px;
   line-height: 135%;
   letter-spacing: 0px;
@@ -37,7 +41,7 @@
 }
 
 .text-preset-4 {
-  font: "Poppins";
+  font-family: "Poppins";
   font-size: 15px;
   line-height: 140%;
   letter-spacing: 0px;
@@ -45,9 +49,126 @@
 }
 
 .text-preset-5 {
-  font: "Poppins";
+  font-family: "Poppins";
   font-size: 13px;
   line-height: 160%;
   letter-spacing: 0px;
   font-weight: 400;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+
+  background-color: #fafafa;
+  color: var(--grey-500);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: var(--space-500) var(--space-400);
+}
+
+header {
+  text-align: center;
+  margin-bottom: var(--space-500);
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: var(--space-200);
+}
+
+h1 span {
+  display: block;
+}
+
+article {
+  width: 314px;
+  height: 234px;
+  margin-bottom: var(--space-400);
+  padding: var(--space-400);
+
+  display: grid;
+  gap: var(--space-400);
+  grid-template-areas:
+    "header "
+    "img ";
+
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+
+  background-color: var(--white);
+}
+
+article::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 4px;
+}
+
+.card-red::before {
+  background: var(--red);
+}
+
+.card-cyan::before {
+  background: var(--cyan);
+}
+
+.card-orange::before {
+  background: var(--orange);
+}
+
+.card-blue::before {
+  background: var(--blue);
+}
+
+article:last-child {
+  margin-bottom: 0;
+}
+
+h2 {
+  margin-bottom: var(--space-100);
+}
+
+article p {
+  color: var(--grey-400);
+}
+
+.title {
+  grid-area: header;
+}
+
+img {
+  grid-area: img;
+  justify-self: end;
+}
+
+@media (min-width: 768px) {
+  .text-preset-1,
+  .text-preset-2 {
+    font-size: 36px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .text-preset-1,
+  .text-preset-2 {
+    font-size: 36px;
+  }
 }
